#fix Made checkbox smaller on mobile devices

--- a/app/main.css
+++ b/app/main.css
@@ -5865,6 +5865,16 @@ page-404__title::after {
     .comparison {
         top: 81px;
     }
+
+    /* Modal callback */
+    .custom-checkbox__checkbox {
+        width: 20px;
+        height: 20px;
+        -webkit-transform: none;
+        -ms-transform: none;
+        transform: none;
+        vertical-align: middle;
+    }
 }
 
 @media (max-width: 767px) {
@@ -5985,21 +5995,13 @@ page-404__title::after {
         -webkit-flex-direction: column;
         -ms-flex-direction: column;
         flex-direction: column;
-        align-items: flex-end;
+        -ms-align-items: center;
+        align-items: center;
     }
 
     .personal-date {
         width: 100%;
         margin: 0 0 20px;
-    }
-
-    .custom-checkbox__checkbox {
-        width: 28px;
-        height: 28px;
-        -webkit-transform: none;
-        -ms-transform: none;
-        transform: none;
-        vertical-align: middle;
     }
 }
 
